# irr_mcs_5403_course_tutorials

./: CMakeLists.txt  README.md  package.xml
cfg/: HSVImageProcessDynCfg.cfg  PublishNodeDynCfg.cfg
launch/: dynamic_reconfigure.launch  hvs_image_process.launch  teleop_turtle.launch  teleop_turtle_params.launch  two_turtles.launch  two_turtles_groups.launch  two_turtles_groups_arg.launch
params/: params.yaml  params_short.yaml
scripts/: closest_object.py  count.py  hello.py  image_process_hsv.py  make_rect_obs.py  opencv_bgr.py  opencv_canny.py  opencv_colorspaces.py  opencv_draw.py  opencv_draw_color.py  opencv_edge_detection.py  opencv_hough.py  opencv_hsv.py  opencv_hsv_canny.py  opencv_hsv_canny_hough.py  opencv_hsv_edge_detection.py  opencv_moments.py  prime.py  publish_image.py  publisher.py  publisher_dyn.py  set_bg_color.py  subscriber.py
scripts/learning_python/: class_circle.py  comments.py  escape_characters.py  for_loop.py  function_example.py  if_elif_else.py  input_sample.py  list_modify.py  list_operations_1.py  list_operations_2.py  sample_module.py  sequences.py  string_format.py  test.py  tuple.py  while_loop.py
scripts/matplotlib/: matplotlib_examples.py
src/: count.cpp  hello.cpp  prime.cpp  publisher.cpp  set_bg_color.cpp  subscriber.cpp
